--- a/src/index.html
+++ b/src/index.html
@@ -1,3 +1,1 @@
-<canvas dr-on-init="this.onInitCanvas" class="canvas">
-
-</canvas>
+<canvas dr-on-init="this.onInitCanvas" class="canvas"></canvas>
