--- a/src/index.html
+++ b/src/index.html
@@ -1,1 +1,8 @@
+<div dr-on-init="this.onInitCanvasContainer" class="canvas-container">
 <canvas dr-on-init="this.onInitCanvas" class="canvas"></canvas>
+</div>
+<div>
+    <div style="text-align: center"><button>▲</button></div>
+    <div style="text-align: center"><button>◀︎</button> <button>▶︎</button></div>
+    <div style="text-align: center"><button>▼</button></div>
+</div>
