--- a/src/index.html
+++ b/src/index.html
@@ -6,3 +6,6 @@
     <div style="text-align: center"><button>◀︎</button> <button>▶︎</button></div>
     <div style="text-align: center"><button>▼</button></div>
 </div>
+<div>
+    <div style="text-align: center"><button dr-event-click="this.tile.userData.world.tile.size--">+</button> <button dr-event-click="this.tile.userData.world.tile.size++">-</button></div>
+</div>
