--- a/src/index.html
+++ b/src/index.html
@@ -7,5 +7,5 @@
     <div style="text-align: center"><button>▼</button></div>
 </div>
 <div>
-    <div style="text-align: center"><button dr-event-click="this.tile.userData.world.tile.size--">+</button> <button dr-event-click="this.tile.userData.world.tile.size++">-</button></div>
+    <div style="text-align: center"><button dr-event-click="this.tile.userData.world.zoom--">+</button> <button dr-event-click="this.tile.userData.world.zoom++">-</button></div>
 </div>
