--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 </div>
 <div>
     <div style="text-align: center"><button dr-event-click="this.space.up()">▲</button></div>
-    <div style="text-align: center"><button>◀︎</button> <button>▶︎</button></div>
+    <div style="text-align: center"><button dr-event-click="this.space.left()">◀︎</button> <button dr-event-click="this.space.right()">▶︎</button></div>
     <div style="text-align: center"><button dr-event-click="this.space.down()">▼</button></div>
 </div>
 <div>
