--- a/src/index.html
+++ b/src/index.html
@@ -7,5 +7,5 @@
     <div style="text-align: center"><button dr-event-click="this.space.down()">▼</button></div>
 </div>
 <div>
-    <div style="text-align: center"><button dr-event-click="this.space.w--">+</button> <button dr-event-click="this.space.w++">-</button></div>
+    <div style="text-align: center"><button dr-event-click="this.space.zoomIn()">+</button> <button dr-event-click="this.space.zoomOut()">-</button></div>
 </div>
