--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
-<div dr-on-init="this.onInitCanvasContainer" class="canvas-container">
-<canvas dr-on-init="this.onInitCanvas" class="canvas"></canvas>
+<div dr-on-init="this.onInitCanvasContainer" class="canvas-container" style="display: flex">
+    <span>aaaaaa</span><canvas dr-on-init="this.onInitCanvas" class="canvas"></canvas>
 </div>
 <div>
     <div style="text-align: center"><button dr-event-click="this.space.up()">▲</button></div>
